fixed header alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 5vh;
   display: flex;
   flex-direction: column;
